--- a/css/styles.css
+++ b/css/styles.css
@@ -19,20 +19,20 @@
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --teal: #64a19d;
+  --teal: #8f9fa;
   --cyan: #17a2b8;
   --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
+  --gray: #8f9fa;
+  --gray-dark: #8f9fa;
   --primary: #64a19d;
-  --secondary: #6c757d;
+  --secondary: #8f9fa;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #343a40;
-  --black: #000000;
+  --dark: #8f9fa;
+  --black: #8f9fa;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -52,7 +52,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: 8f9fa;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
